# SomeIdea

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  interface.rs  main.rs
src/generator/: mod.rs  music_chords.rs  music_modes.rs  music_notes.rs  random.rs
src/interface/: mod.rs  random_chords.rs  random_notes.rs  widget.rs
src/interface/music/: mod.rs  random_chords.rs  random_keys.rs  random_modes.rs  random_notes.rs
